{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 4,
  "lineage": "fdbc33df-9c73-7dee-7e78-3f550c1dd758",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DEV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-south-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c6724c280604575",
            "arn": "arn:aws:ec2:ap-south-1:174228772591:instance/i-09fc6a4d611f3798c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09fc6a4d611f3798c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00fda336e71a864d3",
            "private_dns": "ip-172-31-44-177.ap-south-1.compute.internal",
            "private_ip": "172.31.44.177",
            "public_dns": "ec2-52-66-198-92.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.198.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0837fcedd31c1282c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "new-ssh",
              "new-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6312135674df6c5",
            "tags": {
              "Name": "my_dev_env -ap-south-1a"
            },
            "tags_all": {
              "Name": "my_dev_env -ap-south-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e6fd636751798b7",
              "sg-0c893532deeff435f"
            ]
          },
          "dependencies": [
            "aws_security_group.new-ssh",
            "aws_security_group.new-web",
            "data.aws_ami.amz-ami",
            "data.aws_availability_zones.my_azones",
            "data.aws_ec2_instance_type_offerings.my-inst-type"
          ]
        },
        {
          "index_key": "ap-south-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c6724c280604575",
            "arn": "arn:aws:ec2:ap-south-1:174228772591:instance/i-048c88864623c7546",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048c88864623c7546",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-059f040d1d021edca",
            "private_dns": "ip-172-31-9-203.ap-south-1.compute.internal",
            "private_ip": "172.31.9.203",
            "public_dns": "ec2-13-232-16-36.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.16.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088ec7512e384da46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "new-ssh",
              "new-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0276ac1d3a9f98dfb",
            "tags": {
              "Name": "my_dev_env -ap-south-1b"
            },
            "tags_all": {
              "Name": "my_dev_env -ap-south-1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e6fd636751798b7",
              "sg-0c893532deeff435f"
            ]
          },
          "dependencies": [
            "aws_security_group.new-ssh",
            "aws_security_group.new-web",
            "data.aws_ami.amz-ami",
            "data.aws_availability_zones.my_azones",
            "data.aws_ec2_instance_type_offerings.my-inst-type"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:security-group/sg-00e6fd636751798b7",
            "description": "Allow the ssh protocol",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " Allow all the traffic outbounds into ec2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e6fd636751798b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh into the group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "new-ssh",
            "name_prefix": "",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-036b5d7298f231651"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:security-group/sg-0c893532deeff435f",
            "description": "Allow the web traffic protocol",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " Allow all the traffic outbounds into ec2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c893532deeff435f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow web into the group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow web-secure into the group",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "new-web",
            "name_prefix": "",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-036b5d7298f231651"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}